Added prototype Directory

--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
 <head>
   <meta charset="utf-8">
 
-  <title>IFSC 1310 | Your name</title>
+  <title>IFSC 1310 | Grason Johnson</title>
   <meta name="description" content="Keyword Rich Description">
-  <meta name="author" content="Your Name">
+  <meta name="author" content="Grason Johnson">
 
 </head>
 
 <body>
   <h1>Your Name</h1>
+  <nav>
+    <ul>
+        <li>
+            <a href="prototype/index.html">Prototype Web Assignment</a>
+        </li>
+    </ul>
+  </nav>
 </body>
 </html>
